# kif-llm

./: .gitignore  README.md
kbel/: README.md  pyproject.toml
kbel/examples/: demo.ipynb
kbel/src/kbel/disambiguators/: __init__.py  abc.py  similarity.py  simple.py
kbel/src/kbel/disambiguators/llm/: __init__.py  constants.py  llm_disambiguator.py  parsers.py  utils.py
kifqa/: README.md  pyproject.toml
kifqa-ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
kifqa-ui/src/: App.tsx  main.tsx
kifqa-ui/src/components/StatmentsTable/: StatmentsTable.tsx
kifqa-ui/src/mocks/: handlers.ts
kifqa-ui/src/model/: Wikidata.ts
kifqa-ui/src/pages/Home/: ConfigDrawer.tsx  DebugModal.tsx  Home.tsx
kifqa-ui/src/services/: api.ts
kifqa/api/: README.md  app.py  config.py
kifqa/api/src/controllers/: config_controller.py  filter_controller.py  query_controller.py  registry_controller.py  status_controller.py
kifqa/api/src/routes/: routes.py
kifqa/api/src/services/: config_service.py  filter_service.py  query_service.py  registry_service.py
kifqa/api/src/utils/: decorators.py
kifqa/examples/: demo.ipynb
kifqa/lib/kifqa/: __init__.py  cli.py  constants.py  kifqa.py  utils.py
kifqa/lib/kifqa/fewshot_embedding/: embedding_serializer.py
kifqa/lib/kifqa/fewshot_embedding/examples/: demo-dbpedia.ipynb  demo-wikidata.ipynb  questions.pkl
kifqa/lib/kifqa/fewshot_embedding/loaders/: __init__.py  abc.py  csv_loader.py  json_loader.py  jsonl_loader.py
kifqa/lib/kifqa/metrics/: __init__.py
kifqa/lib/kifqa/model/: __init__.py  example.py
kifqa/lib/kifqa/parsers/: abc.py  python_triple_pattern.py
kifqa/lib/kifqa/q2t/: __init__.py  q2t.py
kifqa/lib/kifqa/resources/: dbpedia.pkl  wikidata.pkl
llm_store/: README.md  __init__.py  constants.py  language_models.py  llm.py  output_parsers.py  prompts.py  pyproject.toml  utils.py
llm_store/compiler/: __init__.py
llm_store/compiler/llm/: __init__.py  compiler.py  filter_compiler.py
llm_store/context_generator/: __init__.py  __main__.py  context_generator.py  ignored.py  options.py
llm_store/context_generator/plugins/: __init__.py  exchange.py  google_episodes.py  imdb_episodes.py  ner_extract.py  ner_extract_wikipedia.py  wikipedia_episodes.py  wikipedia_place_of_death.py  wikipedia_summary.py  wikitree_place_of_death.py
llm_store/query_to_question/: __init__.py  constants.py  query_to_question.py
