[project]
name = "kbel"
version = "0.1.0"
description = "A framework for knowledge base entity linking."
authors = [
    {name = "Marcelo Machado",email = "marcelo.machado@ufjf.br"}
]
readme = "README.md"
requires-python = "^3.11,<3.14"

[tool.poetry.dependencies]
kif-lib = "^0.12.0"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
langchain = {version = "^0.3.27", optional = true}
langchain-openai = {version = "^0.3.32", optional = true}
langchain-ollama = {version = "^0.3.7", optional = true}
langchain-ibm = {version = "^0.3.17", optional = true}
sentence-transformers = {version = "^5.1.0", optional = true}


[tool.poetry]
packages = [
  { include = "kbel", from = "src" }
]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
