[project]
name = "kifqa"
version = "0.1.0"
description = "A natural language interface for KIF"
authors = [
    {name = "Marcelo Machado",email = "marcelo.oc.machado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry.dependencies]
aiofiles = ">=24.1.0,<25.0.0"
tenacity = ">=9.1.2,<10.0.0"
kbel = { git = "https://github.com/marcelomachado/kif-llm.git", branch = "dev", subdirectory = "kbel" }
langchain = "^0.3.27"
flask = "^3.1.2"
flask-cors = "^6.0.1"
rich = "^14.1.0"
kif-lib = "^0.12.0"

[project.scripts]
kifqa = "kifqa.cli:main"

[tool.poetry]
packages = [{include = "kifqa", from = "lib"}]


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
